여행정보 관련 api 엔드포인트 /info -> /tour 변경, 카테고리 선택 관련 http method GET으로 변경

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -62,7 +62,7 @@
                 </a>
             </li>
             <li >
-                <a href="/info/area" class="nav-link-act nav-link py-2 border-bottom">
+                <a href="/tour/area" class="nav-link-act nav-link py-2 border-bottom">
                     <i class="bi bi-speedometer2 icon"></i>
                     여행정보
                 </a>
