--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
 
                 <h1 class="mb-5 sec2h2">이번 여행은 <br>어디로 <br>갈까요?</h1>
                 <div class="col">
-                    <a href="../../info/city/1">
+                    <a href="../../tour/city/1">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/seoul2.jpg" class="card-img-top rounded" alt="서울">
                             <div class="card-img-overlay cardgradient">
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/6">
+                    <a href="../../tour/city/6">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/busan.png" class="card-img-top rounded" alt="부산">
                             <div class="card-img-overlay cardgradient">
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/39">
+                    <a href="../../tour/city/39">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/jeju.jpg" class="card-img-top rounded" alt="제주">
                             <div class="card-img-overlay cardgradient">
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/3">
+                    <a href="../../tour/city/3">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/daejeon.jpg" class="card-img-top rounded" alt="대전">
                             <div class="card-img-overlay cardgradient">
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/4">
+                    <a href="../../tour/city/4">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/daegu.png" class="card-img-top rounded" alt="대구">
                             <div class="card-img-overlay cardgradient">
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/9">
+                    <a href="../../tour/city/9">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/kunggi.jpg" class="card-img-top rounded" alt="경기도 수원">
                             <div class="card-img-overlay cardgradient">
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="col">
-                    <a href="../../info/city/5">
+                    <a href="../../tour/city/5">
                         <div class="card border-0">
                             <img src="assets/img/mainimg/gwangju.jpg" class="card-img-top rounded" alt="광주">
                             <div class="card-img-overlay cardgradient">
@@ -153,7 +153,7 @@
             <div class = "invisiblecard">
                 <div class="row row-cols-1 row-cols-md-4 g-4 pt-4">
                     <div class="col">
-                        <a href="../../info/city/32">
+                        <a href="../../tour/city/32">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/gangwon.jpg" class="card-img-top rounded" alt="강원도">
                                 <div class="card-img-overlay cardgradient">
@@ -166,7 +166,7 @@
 
 
                     <div class="col">
-                        <a href="../../info/city/7">
+                        <a href="../../tour/city/7">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/ulsan.jpg" width="100%" class="card-img-top rounded" alt="울산">
                                 <div class="card-img-overlay cardgradient">
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/2">
+                        <a href="../../tour/city/2">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/incheon.jpg" class="card-img-top rounded" alt="인천">
                                 <div class="card-img-overlay cardgradient">
@@ -188,7 +188,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/8">
+                        <a href="../../tour/city/8">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/sejong.png" class="card-img-top rounded" alt="세종">
                                 <div class="card-img-overlay cardgradient">
@@ -199,7 +199,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/33">
+                        <a href="../../tour/city/33">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/chungbuk.jpg" class="card-img-top rounded" alt="충북">
                                 <div class="card-img-overlay cardgradient">
@@ -210,7 +210,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/34">
+                        <a href="../../tour/city/34">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/chungnam.jpg" class="card-img-top rounded" alt="충남">
                                 <div class="card-img-overlay cardgradient">
@@ -221,7 +221,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/35">
+                        <a href="../../tour/city/35">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/kyungbuk.jpg" class="card-img-top rounded" alt="경북">
                                 <div class="card-img-overlay cardgradient">
@@ -232,7 +232,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/36">
+                        <a href="../../tour/city/36">
                             <div class="card border-0 " >
                                 <img src="assets/img/mainimg/kyungnam.jpg" class="card-img-top rounded" alt="경남">
                                 <div class="card-img-overlay cardgradient">
@@ -243,7 +243,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/37">
+                        <a href="../../tour/city/37">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/jeonrabukdo.jpg" class="card-img-top rounded" alt="전북">
                                 <div class="card-img-overlay cardgradient">
@@ -254,7 +254,7 @@
                     </div>
 
                     <div class="col">
-                        <a href="../../info/city/38">
+                        <a href="../../tour/city/38">
                             <div class="card border-0 ">
                                 <img src="assets/img/mainimg/jeonranamdo.jpg" class="card-img-top rounded" alt="전남">
                                 <div class="card-img-overlay cardgradient">
