--- a/src/main/resources/templates/plan/showplan.html
+++ b/src/main/resources/templates/plan/showplan.html
@@ -784,7 +784,7 @@
                                 <div class="timeline">
                                     <div class="outer planContainer">
                                         <div>
-                                            <a href="/info/content/${data.contentid}" class="list-group-item list-group-item-action" aria-current="true">
+                                            <a href="/tour/content/${data.contentid}" class="list-group-item list-group-item-action" aria-current="true">
                                                 <div class="content">
                                                     <div class="info p-3">
                                                         <h5 class="mb-1 title">${data.title}</h5>
