--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -1870,7 +1870,7 @@
             $('#touritem-wrap').css('cursor','pointer');
             $('#touritem-wrap').click(function (){
                 savePage
-                location.href = `../info/content/${tourItemId}`;
+                location.href = `../tour/content/${tourItemId}`;
             })
             touritemInfoTimer = setTimeout(function () {
                 showTourItemSimpleInfo(tourItemId)
