--- a/src/main/resources/templates/tourinfo/area.html
+++ b/src/main/resources/templates/tourinfo/area.html
@@ -154,7 +154,7 @@
             <!--           <table border="1" width="70%" align="center"> -->
             <!--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
                 <%--                    <c:if test="${idx.index % 3 == 0}"><tr></c:if>--%>
-                <%--                    <td><a href="../info/city/${area.j_areacode}">${area.j_area_name}</a></td>--%>
+                <%--                    <td><a href="../tour/city/${area.j_areacode}">${area.j_area_name}</a></td>--%>
                 <%--                    <c:if test="${idx.index % 3 == 2}"></tr></c:if>--%>
                 <%--                </c:forEach>--%>
             <%--            </table>-->
@@ -164,31 +164,31 @@
             <div class="main mt-5">
 
                 <div class="main_card b1">
-                    <a href="../info/city/1">
+                    <a href="../tour/city/1">
                         <div class="main_bar">서울</div>
                     </a>
                 </div>
 
                 <div class="main_card b2">
-                    <a href="../info/city/6">
+                    <a href="../tour/city/6">
                         <div class="main_bar">부산</div>
                     </a>
                 </div>
 
                 <div class="main_card b3">
-                    <a href="../info/city/39">
+                    <a href="../tour/city/39">
                         <div class="main_bar">제주</div>
                     </a>
                 </div>
 
                 <div class="main_card b4">
-                    <a href="../info/city/3">
+                    <a href="../tour/city/3">
                         <div class="main_bar">대전</div>
                     </a>
                 </div>
 
                 <div class="main_card b5">
-                    <a href="../info/city/4">
+                    <a href="../tour/city/4">
                         <div class="main_bar">대구</div>
                     </a>
                 </div>
@@ -196,37 +196,37 @@
 
             <div class="main mt-3">
                 <div class="main_card b6">
-                    <a href="../info/city/31">
+                    <a href="../tour/city/31">
                         <div class="main_bar">경기도</div>
                     </a>
                 </div>
 
                 <div class="main_card b7">
-                    <a href="../info/city/5">
+                    <a href="../tour/city/5">
                         <div class="main_bar">광주</div>
                     </a>
                 </div>
 
                 <div class="main_card b8">
-                    <a href="../info/city/32">
+                    <a href="../tour/city/32">
                         <div class="main_bar">강원도</div>
                     </a>
                 </div>
 
                 <div class="main_card b9">
-                    <a href="../info/city/7">
+                    <a href="../tour/city/7">
                         <div class="main_bar">울산</div>
                     </a>
                 </div>
 
                 <div class="main_card b10">
-                    <a href="../info/city/2">
+                    <a href="../tour/city/2">
                         <div class="main_bar">인천</div>
                     </a>
                 </div>
 
                 <div class="main_card b11">
-                    <a href="../info/city/8">
+                    <a href="../tour/city/8">
                         <div class="main_bar">세종</div>
                     </a>
                 </div>
@@ -234,37 +234,37 @@
 
             <div class="main mt-3">
                 <div class="main_card b12">
-                    <a href="../info/city/33">
+                    <a href="../tour/city/33">
                         <div class="main_bar">충북</div>
                     </a>
                 </div>
 
                 <div class="main_card b13">
-                    <a href="../info/city/34">
+                    <a href="../tour/city/34">
                         <div class="main_bar">충남</div>
                     </a>
                 </div>
 
                 <div class="main_card b14">
-                    <a href="../info/city/35">
+                    <a href="../tour/city/35">
                         <div class="main_bar">경북</div>
                     </a>
                 </div>
 
                 <div class="main_card b15">
-                    <a href="../info/city/36">
+                    <a href="../tour/city/36">
                         <div class="main_bar">경남</div>
                     </a>
                 </div>
 
                 <div class="main_card b16">
-                    <a href="../info/city/37">
+                    <a href="../tour/city/37">
                         <div class="main_bar">전북</div>
                     </a>
                 </div>
 
                 <div class="main_card b17">
-                    <a href="../info/city/38">
+                    <a href="../tour/city/38">
                         <div class="main_bar">전남</div>
                     </a>
                 </div>
