--- a/src/main/resources/templates/fragments/searchheader.html
+++ b/src/main/resources/templates/fragments/searchheader.html
@@ -14,7 +14,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/info/area" class="nav-link px-2" >여행정보</a></li>
+                <li><a href="/tour/area" class="nav-link px-2" >여행정보</a></li>
                 <li><a href="/planner" class="nav-link px-2">여행일정</a></li>
                 <li><a href="/board" class="nav-link px-2">커뮤니티</a></li>
             </ul>
