--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -2004,7 +2004,7 @@
             $('#touritem-wrap').css('cursor','pointer');
             $('#touritem-wrap').click(function (){
                 savePage
-                location.href = `../info/content/${tourItemId}`;
+                location.href = `../tour/content/${tourItemId}`;
             })
             touritemInfoTimer = setTimeout(function () {
                 showTourItemSimpleInfo(tourItemId)
