--- a/src/main/resources/templates/tourinfo/content.html
+++ b/src/main/resources/templates/tourinfo/content.html
@@ -329,7 +329,7 @@
 
         #wrap {
             width: 1200px;
-            margin: 0 auto;
+            margin : 0 calc((50vw - 600px) - 150px) 0 calc((50vw - 600px) + 150px);
         }
 
         th, td {
@@ -337,12 +337,12 @@
             padding: 10px;
         }
 
-        swiper-container {
+        .swiper-container {
             width: 100%;
             height: 100%;
         }
 
-        swiper-slide {
+        .swiper-slide {
             text-align: center;
             font-size: 18px;
             background: #fff;
@@ -351,7 +351,7 @@
             align-items: center;
         }
 
-        swiper-slide div a img {
+        .swiper-slide div a img {
             display: block;
             width: 100%;
             height: 100%;
