[수정] 플래너 관련 api 수정중

--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -1325,10 +1325,10 @@
                         }), // 전송할 데이터
                         success: function(response) { // 요청이 성공적으로 완료되었을 때 실행될 함수
                             console.log(response);
-                            // var p_id = response.p_id; // 응답에서 p_id 추출
-                            // // p_id를 파라미터로 포함하는 새로운 URL로 페이지 이동
-                            // window.location.href = '/plan/show?p_id=' + p_id;
-                            // console.log('성공');
+                            var p_id = response.plannerId; // 응답에서 p_id 추출
+                            // p_id를 파라미터로 포함하는 새로운 URL로 페이지 이동
+                            window.location.href = '/plan/show?p_id=' + p_id;
+                            console.log('성공');
                         },
                         error: function(xhr, status, error) { // 요청이 실패했을 때 실행될 함수
                             alert('실패');
